@@ -1,6 +1,8 @@
 Changes for 1.8.2
 
  - [ZBX-2236] fixed processing of Telnet checks by Zabbix proxy (Sasha)
+ - [ZBX-2234] fixed icon for mass open action in status of triggers (Aly)
+ - [ZBX-2233] fixed processing of action condition 'Trigger <>' (Sasha)
  - [ZBX-1983] fixed port validation in host agent port, ipmi port and in discovery checks ports (now supports for ports ranges like "21-80,465") (AM)
  - [ZBX-1357] updated French translation; thanks to alixen (Richlv)
  - [ZBX-2048] fixed sorting in screens dropdown (Vedmak)
